# CrossoutLogInfo

./: .gitignore  Cargo.toml  CrossoutLogInfo.sln  Directory.Build.props  Dockerfile  appveyor.yml  docker-compose.yml
crossout-log-common/: Cargo.toml
crossout-log-common/src/: log.rs
crossout-log-server/: .env  Cargo.toml  Dockerfile  docker-compose.yml
crossout-log-server/migrations/00000000000000_diesel_initial_setup/: down.sql
crossout-log-server/migrations/2022-05-25-163530_games/: down.sql  up.sql
crossout-log-server/migrations/2022-05-25-174228_stripes/: down.sql  up.sql
crossout-log-server/migrations/2022-05-25-174940_kills/: down.sql  up.sql
crossout-log-server/src/: db.rs  endpoints.rs  generated.rs  lib.rs  main.rs  schema.rs
crossout-log-watcher/: Cargo.toml
crossout-log-watcher/src/: log.rs  main.rs  parse.rs
src/: AssemblyInfo.cs  Directory.Build.props
src/crossout-log-parser/: Cargo.toml
src/crossout-log-parser/src/: log.rs  main.rs
