[package]
authors = ["ProphetLamb <prophet.lamb@gmail.com>"]
categories = ["command-line-utilities"]
description = ""
edition = "2021"
license = "MIT/Apache-2.0"
name = "crossout-log-watcher"
readme = "README.md"
repository = "https://github.com/ProphetLamb/CrossoutLogInfo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "2.1.8", features = [
  "apollo_tracing",
  "dataloader",
] }
async-graphql-actix-web = "2.1.8"
actix-web = "3"
async-std = "1.5.0"
chrono = "0.4"
dataloader = "0.12.0"
sqlx = { version = "0.3.5", features = ["postgres", "chrono"] }
async-trait = "0.1.30"
dotenv = "0.15.0"
futures = "0.3.8"
env_logger = "0.8.2"
log = "0.4.11"
