[package]
authors = ["ProphetLamb <prophet.lamb@gmail.com>"]
categories = ["microservice"]
description = ""
edition = "2021"
license = "MIT/Apache-2.0"
name = "crossout-log-server"
readme = "README.md"
repository = "https://github.com/ProphetLamb/CrossoutLogInfo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", default-features = false }
juniper = "0.15"
juniper_rocket = "0.8.0"
chrono = "0.4"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
