[package]
authors = ["ProphetLamb <prophet.lamb@gmail.com>"]
categories = ["microservice"]
description = ""
edition = "2021"
license = "MIT/Apache-2.0"
name = "crossout-log-server"
readme = "README.md"
repository = "https://github.com/ProphetLamb/CrossoutLogInfo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7"
actix-web = "4.0"
actix-web-actors = "4.1"
chrono = "0.4"
crossout-log-common = { path = "../crossout-log-common", features = ["diesel"] }
diesel = { version = "1.4", features = [
  "chrono",
  "postgres",
  "r2d2",
  "serde_json",
] }
diesel-derive-enum = "1.1"
diesel_migrations = "1.4"
dotenv = "0.15"
env_logger = "0.9"
juniper = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wundergraph = { version = "0.1", features = ["postgres", "chrono", "debug"] }
