[package]
authors = ["ProphetLamb <prophet.lamb@gmail.com>"]
categories = ["command-line-utilities"]
description = ""
edition = "2021"
license = "MIT/Apache-2.0"
name = "crossout-log-watcher"
readme = "README.md"
repository = "https://github.com/ProphetLamb/CrossoutLogInfo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "3.1", features = ["derive"] }
flagset = "0.4"
nom = "7.1"
parse-display = "0.5"
dirs = "4.0"
crossbeam = "0.8"
threadpool = "1.8"
