[package]
authors = ["ProphetLamb <prophet.lamb@gmail.com>"]
categories = ["command-line-utilities"]
description = ""
edition = "2021"
license = "MIT/Apache-2.0"
name = "crossout-log-watcher"
readme = "README.md"
repository = "https://github.com/ProphetLamb/CrossoutLogInfo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.1", features = ["derive"] }
closure = "0.3"
crossbeam = "0.8"
crossout-log-common = { path = "../crossout-log-common", features = ["serde"] }
dirs = "4.0"
num_cpus = "1.0"
threadpool = "1.8"
